--- a/index.html
+++ b/index.html
@@ -4,23 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Time in Vegas</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Discover tips, tricks, and must-know info for first-time visitors to Las Vegas. From the best steak houses to free attractions and ultimate guides to navigating Sin City.">
+    <meta name="keywords" content="Las Vegas travel, first time in Las Vegas, Las Vegas guide, Las Vegas attractions, Las Vegas tips, things to do in Las Vegas, cheap eats in Las Vegas, Las Vegas nightlife, best steak houses Las Vegas, Grand Canyon tours">
+    <meta name="author" content="Northerners Guide To Las Vegas">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph Meta Tags (for social sharing) -->
+    <meta property="og:title" content="First Time in Vegas - Your Ultimate Travel Guide">
+    <meta property="og:description" content="Discover the best attractions, restaurants, and insider tips for your first time in Las Vegas.">
+    <meta property="og:image" content="https://your-site.com/path-to-image.jpg"> <!-- Replace with your image -->
+    <meta property="og:url" content="https://www.firsttimeinvegas.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="First Time in Vegas - Your Ultimate Travel Guide">
+    <meta name="twitter:description" content="Discover the best attractions, restaurants, and insider tips for your first time in Las Vegas.">
+    <meta name="twitter:image" content="https://your-site.com/path-to-image.jpg"> <!-- Replace with your image -->
+
     <!-- Nunito Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
-    <style>
-       body {
-    font-family: 'Nunito', sans-serif;
-    text-align: center;
-    background-image: url('https://news3lv.com/resources/media/df089ac8-113d-49ca-9c5a-016a8a591c38-full36x25_StripViewCourtesyofHardRockInternational.jpg?1675020564986');
-    background-size: cover; /* Ensures the image covers the entire width */
-    background-position: center;
-    background-attachment: fixed;
-    margin: 0;
-    padding: 0;
-}
+    <!-- Schema.org Structured Data for a Video Object -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "VideoObject",
+      "name": "10 Must-try Steak Houses In Las Vegas",
+      "description": "Discover the top 10 steak houses in Las Vegas you absolutely must try!",
+      "thumbnailUrl": "https://img.youtube.com/vi/BlxWTlyKcRc/default.jpg",
+      "uploadDate": "2024-09-12",
+      "contentUrl": "https://www.youtube.com/watch?v=BlxWTlyKcRc",
+      "embedUrl": "https://www.youtube.com/embed/BlxWTlyKcRc",
+      "duration": "PT5M33S",
+      "interactionCount": "12345",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Northerners Guide To Las Vegas",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://your-logo-url.com/logo.png" <!-- Replace with your logo -->
+        }
+      }
+    }
+    </script>
 
+    <style>
+        body {
+            font-family: 'Nunito', sans-serif;
+            text-align: center;
+            background-image: url('https://news3lv.com/resources/media/df089ac8-113d-49ca-9c5a-016a8a591c38-full36x25_StripViewCourtesyofHardRockInternational.jpg?1675020564986');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            margin: 0;
+            padding: 0;
+        }
 
         header {
             background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), 
@@ -219,6 +262,12 @@
 
     <footer>
         <p>&copy; 2024 First Time in Vegas | <a href="https://www.youtube.com/@NorthernersGuideToLasVegas">Visit My YouTube Channel</a></p>
+
+        <!-- Social Media Links (Optional: Add your social media URLs) -->
+        <p>
+            <a href="https://www.facebook.com/profile.php?id=61562166217913" target="_blank">Facebook</a> |  
+            <a href="https://www.instagram.com/northernersguidetolasvegas/" target="_blank">Instagram</a>
+        </p>
     </footer>
 
 </body>
