--- a/index.html
+++ b/index.html
@@ -177,6 +177,33 @@
         <iframe src="https://www.tubebuddy.com/quicknav/latestembed/UCrO11dw1rJZJL1yvSUO5ASg" frameborder="0" allowfullscreen></iframe>
     </div>
 
+   <!-- Video 1: Planning a trip to Las Vegas and need a car? -->
+    <div class="video-container">
+        <h2>Planning a trip to Las Vegas and need a car?</h2>
+        <iframe src="https://www.youtube.com/embed/emkRlFsjQJ0?si=J828i1DACPPTWX0t" allowfullscreen></iframe>
+        <div class="description">
+            <p>Cheapest and Most Convenient Way to Rent a Car in Las Vegas!</p>
+        </div>
+    </div>
+
+   <!-- Video 1: Shocking Scorpion Incident in Las Vegas -->
+    <div class="video-container">
+        <h2>Shocking Scorpion Incident in Las Vegas</h2>
+        <iframe src="https://www.youtube.com/embed/jhQJ7zbaLbg?si=f_M0Wj5BQZUXFiff" allowfullscreen></iframe>
+        <div class="description">
+            <p>A guest was stung while staying at the hotel, leading to a lawsuit!</p>
+        </div>
+    </div>
+
+  <!-- Video 1: Best Food Deals in Las Vegas -->
+    <div class="video-container">
+        <h2>Best Food Deals in Las Vegas</h2>
+        <iframe src="https://www.youtube.com/embed/2cp7AwKoU18?si=sGwns2JQ9fRSU7b-" allowfullscreen></iframe>
+        <div class="description">
+            <p>A Cheap Eats & Budget Bites!</p>
+        </div>
+    </div>
+
     <!-- Video 1: 10 Must-try Steak Houses In Las Vegas -->
     <div class="video-container">
         <h2>10 Must-try Steak Houses In Las Vegas</h2>
