--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph Meta Tags (for social sharing) -->
     <meta property="og:title" content="First Time in Vegas - Your Ultimate Travel Guide">
     <meta property="og:description" content="Discover the best attractions, restaurants, and insider tips for your first time in Las Vegas.">
-    <meta property="og:image" content="https://your-site.com/path-to-image.jpg"> <!-- Replace with your image -->
+    <meta property="og:image" content="https://www.canva.com/design/DAGSbSL8FAM/Er522ArQFOpv_Xtf1Rf7gA/view"> <!-- Replace with your image -->
     <meta property="og:url" content="https://www.firsttimeinvegas.com">
     <meta property="og:type" content="website">
 
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="First Time in Vegas - Your Ultimate Travel Guide">
     <meta name="twitter:description" content="Discover the best attractions, restaurants, and insider tips for your first time in Las Vegas.">
-    <meta name="twitter:image" content="https://your-site.com/path-to-image.jpg"> <!-- Replace with your image -->
+    <meta name="twitter:image" content="https://www.canva.com/design/DAGSbSL8FAM/Er522ArQFOpv_Xtf1Rf7gA/view"> <!-- Replace with your image -->
 
     <!-- Nunito Font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
