--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Open Graph Meta Tags (for social sharing) -->
     <meta property="og:title" content="First Time in Vegas - Your Ultimate Travel Guide">
-    <meta property="og:description" content="Discover the best attractions, restaurants, and insider tips for your first time in Las Vegas.">
+    <meta property="og:description" content="Discover the best attractions, restaurants, and insider tips for your 1st or 100th time in Las Vegas.">
     <meta property="og:image" content="https://www.canva.com/design/DAGSbSL8FAM/Er522ArQFOpv_Xtf1Rf7gA/view"> <!-- Replace with your image -->
     <meta property="og:url" content="https://www.firsttimeinvegas.com">
     <meta property="og:type" content="website">
@@ -21,7 +21,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="First Time in Vegas - Your Ultimate Travel Guide">
-    <meta name="twitter:description" content="Discover the best attractions, restaurants, and insider tips for your first time in Las Vegas.">
+    <meta name="twitter:description" content="Discover the best attractions, restaurants, and insider tips your 1st or 100th time in Las Vegas.">
     <meta name="twitter:image" content="https://www.canva.com/design/DAGSbSL8FAM/Er522ArQFOpv_Xtf1Rf7gA/view"> <!-- Replace with your image -->
 
     <!-- Nunito Font Link -->
